alignment fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -3,8 +3,9 @@ body {
     overflow: hidden;
     background: #000;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-direction: row;
 }
 
 i {
@@ -373,9 +374,7 @@ i:nth-child(40) {
     }
 }
 
-h2 {
-    color: white;
-}
+
 
 .center {
     padding: 30px;
